--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "18": "^0.0.0",
+    "@module-federation/nextjs-mf": "^8.4.7",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "webpack": "^5.104.1",
+    "webpack-cli": "^6.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
